--- a/notebook/get_protein_spectra.ipynb
+++ b/notebook/get_protein_spectra.ipynb
@@ -931,7 +931,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bio",
+   "display_name": "torch",
    "language": "python",
    "name": "python3"
   },
@@ -945,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
